update product properties 10:07.07.2020

--- a/resources/views/Item/Components/SingleItem.twig
+++ b/resources/views/Item/Components/SingleItem.twig
@@ -198,7 +198,28 @@
 
                             <div class="tab-content overflow-hidden">
                                 <div class="tab-pane active overflow-auto" :id="'details-' + currentVariation.variation.id" role="tabpanel" v-if="isDescriptionTabActive">
-                                    <div class="my-4" v-html="currentVariation.texts.description">
+                                    <div class="my-4">
+                                        <div slot="MyProperty" class="my-property">
+                                            <div class="row">
+                                                {% for property in item.documents[0].data.properties %}
+                                                    {% if property.texts.value != '' or property.selection.name != '' or  property.selection.description  != '' or property.valueFloat != '' or property.valueInt != '' %}
+                                                        <div class="col-xs-6 col-md-5">
+                                                            <b>{{ property.property.names.name }}:</b>
+                                                        </div>
+                                                        <div class="col-xs-6 col-md-7">
+                                                            <span>{{ property.texts.value  }}</span>
+                                                            <span>{{ property.selection.name }}</span>
+                                                            <span>{{ property.selection.description }}</span>
+                                                            <span>{{ property.valueFloat }}</span>
+                                                            <span>{{ property.valueInt }}</span>
+                                                            {% if property.valueFloat != '' or  property.valueInt != '' %}
+                                                                Millimeter
+                                                            {% endif %}
+                                                        </div>
+                                                    {% endif %}
+                                                {% endfor %}
+                                            </div>
+                                        </div>
                                     </div>
                                 </div>
 
