--- a/resources/views/Item/Components/SingleItem.twig
+++ b/resources/views/Item/Components/SingleItem.twig
@@ -43,14 +43,13 @@
                                     <div class="col-xs-6 col-md-7">
                                         <span>${ currentVariation.barcodes[0].code }</span>
                                     </div>
-                                    {% if 'item.condition' in itemData or 'all' in itemData %}
-                                    <div class="col-xs-6 col-md-5">
+
+                                    <div class="col-xs-6 col-md-5" v-if="currentVariation.item.condition && currentVariation.item.condition.names.name !== '' && (itemConfig.includes('item.condition') || itemConfig.includes('all'))">
                                         <b>${ $translate("Ceres::Template.singleItemCondition") }: </b>
                                     </div>
-                                    <div class="col-xs-6 col-md-7">
+                                    <div class="col-xs-6 col-md-7" v-if="currentVariation.item.condition && currentVariation.item.condition.names.name !== '' && (itemConfig.includes('item.condition') || itemConfig.includes('all'))">
                                         <span>${ currentVariation.item.condition.names.name }</span>
                                     </div>
-                                    {% endif %}
 
                                     <div class="col-xs-6 col-md-5" v-if="currentVariation.variation.model !== '' && (itemConfig.includes('item.variation_model') || itemConfig.includes('all'))">
                                         <b>${ $translate("Ceres::Template.singleItemModel") }: </b>
@@ -59,29 +58,26 @@
                                         <span>${ currentVariation.variation.model }</span>
                                     </div>
 
-                                    {% if 'item.manufacturer' in itemData or 'all' in itemData %}
-                                    <div class="col-xs-6 col-md-5">
+                                    <div class="col-xs-6 col-md-5" v-if="currentVariation.filter.hasManufacturer && currentVariation.item.manufacturer.externalName !== '' && (itemConfig.includes('item.manufacturer') || itemConfig.includes('all'))">
                                         <b>${ $translate("Ceres::Template.singleItemManufacturer") }: </b>
                                     </div>
-                                    <div class="col-xs-6 col-md-7">
+                                    <div class="col-xs-6 col-md-7" v-if="currentVariation.filter.hasManufacturer && currentVariation.item.manufacturer.externalName !== '' && (itemConfig.includes('item.manufacturer') || itemConfig.includes('all'))">
                                         <span>${ currentVariation.item.manufacturer.externalName }</span>
                                     </div>
-                                    {% endif %}
-                                    {% if 'item.producerCountry' in itemData or 'all' in itemData %}
-                                        <div class="col-xs-6 col-md-5">
-                                            <b>${ $translate("Ceres::Template.singleItemManufacturingCountry") }: </b>
-                                        </div>
-                                        <div class="col-xs-6 col-md-7">
-                                            <span>${ currentVariation.item.producingCountry.names.name }</span>
-                                        </div>
-                                    {% endif %}
 
-                                        <div class="col-xs-6 col-md-5" v-if="currentVariation.variation.weightNetG !== '' && (itemConfig.includes('item.weightNetG') || itemConfig.includes('all'))">
-                                            <b>${ $translate("Ceres::Template.singleItemNetWeight") }: </b>
-                                        </div>
-                                        <div class="col-xs-6 col-md-7" v-if="currentVariation.variation.weightNetG !== '' && (itemConfig.includes('item.weightNetG') || itemConfig.includes('all'))">
-                                            <span>${ currentVariation.variation.weightNetG } g</span>
-                                        </div>
+                                    <div class="col-xs-6 col-md-5" v-if="currentVariation.item.producingCountry && currentVariation.item.producingCountry.names.name !== '' && (itemConfig.includes('item.producerCountry') || itemConfig.includes('all'))">
+                                        <b>${ $translate("Ceres::Template.singleItemManufacturingCountry") }: </b>
+                                    </div>
+                                    <div class="col-xs-6 col-md-7" v-if="currentVariation.item.producingCountry && currentVariation.item.producingCountry.names.name !== '' && (itemConfig.includes('item.producerCountry') || itemConfig.includes('all'))">
+                                        <span>${ currentVariation.item.producingCountry.names.name }</span>
+                                    </div>
+
+                                    <div class="col-xs-6 col-md-5" v-if="currentVariation.variation.weightNetG !== '' && (itemConfig.includes('item.weightNetG') || itemConfig.includes('all'))">
+                                        <b>${ $translate("Ceres::Template.singleItemNetWeight") }: </b>
+                                    </div>
+                                    <div class="col-xs-6 col-md-7" v-if="currentVariation.variation.weightNetG !== '' && (itemConfig.includes('item.weightNetG') || itemConfig.includes('all'))">
+                                        <span>${ currentVariation.variation.weightNetG } g</span>
+                                    </div>
 
                                     <div class="col-xs-6 col-md-5">
                                         <b>${ $translate("Ceres::Template.singleItemContent") }: </b>
@@ -201,7 +197,23 @@
                                     <div class="my-4">
                                         <div slot="MyProperty" class="my-property">
                                             <div class="row">
-
+                                                {% for property in item.documents[0].data.properties %}
+                                                    {% if property.texts.value != '' or property.selection.name != '' or  property.selection.description  != '' or property.valueFloat != '' or property.valueInt != '' %}
+                                                        <div class="col-xs-6 col-md-5">
+                                                            <b>${ property.property.names.name }:</b>
+                                                        </div>
+                                                        <div class="col-xs-6 col-md-7">
+                                                            <span>${ property.texts.value  }</span>
+                                                            <span>${ property.selection.name }</span>
+                                                            <span>${ property.selection.description }</span>
+                                                            <span>${ property.valueFloat }</span>
+                                                            <span>${ property.valueInt }</span>
+                                                            {% if property.valueFloat != '' or  property.valueInt != '' %}
+                                                                Millimeter
+                                                            {% endif %}
+                                                        </div>
+                                                    {% endif %}
+                                                {% endfor %}
                                             </div>
                                         </div>
                                     </div>
