update product properties 19:07.07.2020

--- a/resources/views/Item/Components/SingleItem.twig
+++ b/resources/views/Item/Components/SingleItem.twig
@@ -197,7 +197,7 @@
                                     <div class="my-4">
                                         <div slot="MyProperty" class="my-property">
                                             <div class="row">
-                                                {% set properties = item.documents[0].data.properties %}
+                                                {% set properties = currentVariation.properties %}
                                                 ${ properties }
 
                                             </div>
