--- a/resources/views/Item/Components/SingleItem.twig
+++ b/resources/views/Item/Components/SingleItem.twig
@@ -197,8 +197,8 @@
                                     <div class="my-4">
                                         <div slot="MyProperty" class="my-property">
                                             <div class="row">
-                                                {% set properties = currentVariation.properties %}
-                                                ${ properties }
+
+                                                ${ currentVariation }
 
                                             </div>
                                         </div>
