--- a/resources/views/Item/Components/SingleItem.twig
+++ b/resources/views/Item/Components/SingleItem.twig
@@ -198,7 +198,7 @@
                                         <div slot="MyProperty" class="my-property">
                                             <div class="row">
 
-                                                ${ currentVariation }
+                                                ${ currentVariation.properties }
 
                                             </div>
                                         </div>
