--- a/resources/views/Item/Components/SingleItem.twig
+++ b/resources/views/Item/Components/SingleItem.twig
@@ -178,7 +178,7 @@
                         <div class="my-5">
                             <ul class="nav nav-tabs" role="tablist">
                                 <li class="nav-item" v-if="currentVariation.properties">
-                                    <a class="nav-link active" data-toggle="tab" :href="'#details-' + currentVariation.variation.id" role="tab">${ $translate("Ceres::Template.singleItemDescription") }</a>
+                                    <a class="nav-link active aaa" data-toggle="tab" :href="'#details-' + currentVariation.variation.id" role="tab">${ $translate("Ceres::Template.singleItemDescription") }</a>
                                 </li>
 
                                 <li class="nav-item aaa" v-if="isTechnicalDataTabActive">
