update product properties 27:07.07.2020

--- a/resources/views/Item/Components/SingleItem.twig
+++ b/resources/views/Item/Components/SingleItem.twig
@@ -203,7 +203,7 @@
                                                         <div class="col-xs-6 col-md-5">
                                                             <b>${ propertyRow.property.names.name }:</b>
                                                         </div>
-                                                        <div class="col-xs-6 col-md-7">
+                                                        <div class="col-xs-6 col-md-7" v-if>
 
                                                         </div>
 
