update product properties 28:07.07.2020

--- a/resources/views/Item/Components/SingleItem.twig
+++ b/resources/views/Item/Components/SingleItem.twig
@@ -198,12 +198,12 @@
                                         <div slot="MyProperty" class="my-property">
                                             <div class="row">
 
-                                                <div v-for="propertyRow in currentVariation.properties">
+                                                <div v-for="propertyRow in currentVariation.properties" class="col-xs-12 col-md-12">
 
                                                         <div class="col-xs-6 col-md-5">
                                                             <b>${ propertyRow.property.names.name }:</b>
                                                         </div>
-                                                        <div class="col-xs-6 col-md-7" v-if>
+                                                        <div class="col-xs-6 col-md-7">
 
                                                         </div>
 
