--- a/resources/views/Item/Components/SingleItem.twig
+++ b/resources/views/Item/Components/SingleItem.twig
@@ -196,9 +196,7 @@
                                 <div class="tab-pane active overflow-auto" :id="'details-' + currentVariation.variation.id" role="tabpanel">
                                     <div class="my-4" v-if="currentVariation.properties">
                                         <div slot="MyProperty" class="my-property">
-                                            <div class="row">
-
-                                                <div v-for="propertyRow in currentVariation.properties" class="col-xs-12 col-md-12">
+                                            <div class="row" v-for="propertyRow in currentVariation.properties">
 
                                                         <div class="col-xs-6 col-md-5">
                                                             <b>${ propertyRow.property.names.name }:</b>
@@ -206,11 +204,10 @@
                                                         <div class="col-xs-6 col-md-7">
                                                             <span v-if="propertyRow.selection.name">${ propertyRow.selection.name }</span>
                                                             <span v-if="propertyRow.selection.description">${ propertyRow.selection.description }</span>
-                                                            <span v-if="propertyRow.valueFloa">${ propertyRow.valueFloat }</span>
-                                                            <span v-if="propertyRow.valueInt">${ propertyRow.valueInt }</span>
-                                                            <span v-if="propertyRow.valueFloat !== '' || propertyRow.valueInt !== ''">Millimeter</span>
+                                                            <span v-if="propertyRow.valueFloa">${ propertyRow.valueFloat } Millimeter</span>
+                                                            <span v-if="propertyRow.valueInt">${ propertyRow.valueInt }Millimeter</span>
                                                         </div>
-                                                </div>
+
                                             </div>
                                         </div>
                                     </div>
