--- a/resources/views/Item/Components/SingleItem.twig
+++ b/resources/views/Item/Components/SingleItem.twig
@@ -201,6 +201,7 @@
                                                     <b>${ propertyRow.property.names.name }:</b>
                                                 </div>
                                                 <div class="col-xs-6 col-md-7">
+                                                    ${ propertyRow }
                                                     <span v-if="propertyRow.texts.value">${ propertyRow.texts.value  }</span>
                                                     <span v-if="propertyRow.selection.name">${ propertyRow.selection.name }</span>
                                                     <span v-if="propertyRow.selection.description">${ propertyRow.selection.description }</span>
