--- a/resources/views/Item/Components/SingleItem.twig
+++ b/resources/views/Item/Components/SingleItem.twig
@@ -197,11 +197,10 @@
                                     <div class="my-4" v-if="currentVariation.properties">
                                         <div slot="MyProperty" class="my-property">
                                             <div class="row" v-for="propertyRow in currentVariation.properties">
-                                                <div class="col-xs-6 col-md-5">
+                                                <div class="col-xs-6 col-md-5" v-if="propertyRow.texts.value !== '' || propertyRow.selection.name !== '' || propertyRow.selection.description !== '' || propertyRow.valueFloat !== '' || propertyRow.valueInt !== ''">
                                                     <b>${ propertyRow.property.names.name }:</b>
                                                 </div>
-                                                <div class="col-xs-6 col-md-7">
-                                                    ${ propertyRow }
+                                                <div class="col-xs-6 col-md-7" v-if="propertyRow.texts.value !== '' || propertyRow.selection.name !== '' || propertyRow.selection.description !== '' || propertyRow.valueFloat !== '' || propertyRow.valueInt !== ''">
                                                     <span v-if="propertyRow.texts.value">${ propertyRow.texts.value  }</span>
                                                     <span v-if="propertyRow.selection.name">${ propertyRow.selection.name }</span>
                                                     <span v-if="propertyRow.selection.description">${ propertyRow.selection.description }</span>
