update product properties 35:07.07.2020

--- a/resources/views/Item/Components/ItemPrice.twig
+++ b/resources/views/Item/Components/ItemPrice.twig
@@ -1,5 +1,5 @@
 <script type="x/template" data-component="item-price">
-<div :class="{ 'has-crossprice': hasCrossPrice }">
+<div>
     <div class="crossprice" v-if="showCrossPrice && hasCrossPrice">
         <del class="text-muted small text-appearance aaabbb">
             ${ currentVariation.prices.rrp.unitPrice.formatted | itemCrossPrice }
