update product properties 38:07.07.2020

--- a/resources/views/Item/Components/ItemPrice.twig
+++ b/resources/views/Item/Components/ItemPrice.twig
@@ -9,7 +9,7 @@
     <span class="price h1">
         <span>
             <template v-if="showDynamicPrice">
-
+                ${ variationTotalPrice | currency(currentVariation.prices.default.currency) }
             </template>
 
             <template v-else>
