--- a/resources/views/Item/Components/ItemPrice.twig
+++ b/resources/views/Item/Components/ItemPrice.twig
@@ -1,8 +1,8 @@
 <script type="x/template" data-component="item-price">
 <div :class="{ 'has-crossprice': hasCrossPrice }">
-    <div class="crossprice" v-if="showCrossPrice && hasCrossPrice">
-        <del class="text-muted small text-appearance aaabbb">
-            ${ currentVariation.prices.rrp.unitPrice.formatted | itemCrossPrice }
+    <div class="crossprice" v-if="v-if="currentVariation.prices.rrp && currentVariation.prices.rrp.data.basePrice > 0 && currentVariation.prices.rrp.data.basePrice > currentVariation.prices.default.unitPrice.value"">
+        <del class="text-muted small text-appearance rrp">
+            {% if item.documents[0].data.texts.lang == 'en' %}RRP ${ currentVariation.prices.rrp.data.basePrice | currency(currentVariation.prices.rrp.currency) } {% endif %}{% if item.documents[0].data.texts.lang == 'de' %}UVP ${ currentVariation.prices.rrp.data.basePrice | currency(currentVariation.prices.rrp.currency) }{% endif %}
         </del>
     </div>
 
