--- a/resources/views/Item/Components/ItemPrice.twig
+++ b/resources/views/Item/Components/ItemPrice.twig
@@ -6,6 +6,11 @@
         </del>
     </div>
 
+    <div class="discount" v-if="currentVariation.prices.rrp && currentVariation.prices.rrp.data.basePrice > 0 && currentVariation.prices.rrp.data.basePrice > currentVariation.prices.default.unitPrice.value">
+        {% set discountNew = 100 - ((item.documents[0].data.prices.default.price.value * 100) / item.documents[0].data.prices.rrp.data.basePrice) %}
+        {% if item.documents[0].data.texts.lang == 'en' %}Discount:{% endif %}{% if item.documents[0].data.texts.lang == 'de' %}Rabatt:{% endif %} {{ discountNew|round }}%
+    </div>
+
     <span class="price h1">
         <span>
             <template v-if="showDynamicPrice">
