update product properties 44:07.07.2020

--- a/resources/views/Item/Components/ItemPrice.twig
+++ b/resources/views/Item/Components/ItemPrice.twig
@@ -14,7 +14,7 @@
     <span class="price h1">
         <span>
             <template v-if="showDynamicPrice">
-                {{ variationTotalPrice | currency(currentVariation.prices.default.currency) }}
+                ${ (currentVariation.unit.content * $store.state.item.variationOrderQuantity).toFixed(2) }
             </template>
 
             <template v-else>
