--- a/resources/views/Item/Components/ItemPrice.twig
+++ b/resources/views/Item/Components/ItemPrice.twig
@@ -14,11 +14,7 @@
     <span class="price h1">
         <span>
             <template v-if="showDynamicPrice">
-                {{ trans("Ceres::Template.dynamicVariationPrice",
-                        {
-                            "price": "${options.filters.currency(variationTotalPrice, currentVariation.prices.default.currency)}"
-                        }
-                    ) }}
+                ${ variationTotalPrice | currency(currentVariation.prices.default.currency) }
             </template>
 
             <template v-else>
