--- a/resources/views/Item/Components/ItemPrice.twig
+++ b/resources/views/Item/Components/ItemPrice.twig
@@ -14,7 +14,11 @@
     <span class="price h1">
         <span>
             <template v-if="showDynamicPrice">
-                ${ variationTotalPrice | currency(currentVariation.prices.default.currency) }
+                {{ trans("Ceres::Template.dynamicVariationPrice",
+                         {
+                             "price": "${options.filters.currency(variationTotalPrice, currentVariation.prices.default.currency)}"
+                         }
+                ) }}
             </template>
 
             <template v-else>
