update product properties 49:07.07.2020

--- a/resources/views/Item/Components/ItemPrice.twig
+++ b/resources/views/Item/Components/ItemPrice.twig
@@ -43,3 +43,52 @@
     </div>
 </div>
 </script>
+<script>
+export default {
+    name: "item-price",
+
+    props:
+    {
+        showCrossPrice:
+        {
+            type: Boolean,
+            default: true
+        }
+    },
+
+    inject: {
+        itemId: {
+            default: null
+        }
+    },
+
+    computed:
+    {
+        currentVariation() {
+            return this.$store.getters[`${this.itemId}/currentItemVariation`]
+        },
+
+        hasCrossPrice() {
+            return !!this.currentVariation.prices.rrp &&
+                this.currentVariation.prices.rrp.unitPrice.value > 0 &&
+                this.currentVariation.prices.rrp.unitPrice.value > this.currentVariation.prices.default.unitPrice.value;
+        },
+
+        variationGraduatedPrice() {
+            return this.$store.getters[`${this.itemId}/variationGraduatedPrice`];
+        },
+
+        variationTotalPrice() {
+            return this.$store.getters[`${this.itemId}/variationTotalPrice`];
+        },
+
+        showDynamicPrice() {
+            const state = this.$store.state.items[this.itemId];
+            return App.config.item.showPleaseSelect
+                && (state.variationSelect && !state.variationSelect.isVariationSelected)
+                && (state.pleaseSelectVariationId === this.currentVariation.variation.id
+                    || state.pleaseSelectVariationId === 0);
+        }
+    }
+}
+</script>
