--- a/resources/views/Item/Components/SingleItem.twig
+++ b/resources/views/Item/Components/SingleItem.twig
@@ -113,7 +113,7 @@
 
                             <graduated-prices></graduated-prices>
 
-                            <div class="crossprice" v-if="currentVariation.prices.rrp && currentVariation.prices.rrp.data.basePrice > 0 && currentVariation.prices.rrp.data.basePrice > currentVariation.prices.default.unitPrice.value">
+                            <div class="crossprice det" v-if="currentVariation.prices.rrp && currentVariation.prices.rrp.data.basePrice > 0 && currentVariation.prices.rrp.data.basePrice > currentVariation.prices.default.unitPrice.value">
                                 <del class="text-muted small text-appearance rrp">
                                     {% if item.documents[0].data.texts.lang == 'en' %}RRP ${ currentVariation.prices.rrp.data.basePrice | currency(currentVariation.prices.rrp.currency) } {% endif %}{% if item.documents[0].data.texts.lang == 'de' %}UVP ${ currentVariation.prices.rrp.data.basePrice | currency(currentVariation.prices.rrp.currency) }{% endif %}
                                 </del>
