--- a/resources/css/main.css
+++ b/resources/css/main.css
@@ -192,6 +192,13 @@ nav.navbar:not(.megamenu) .nav-dropdown-inner li:hover {
 .discount {
     font-size: 1.8rem;
 }
+.crossprice {
+    display: none;
+}
+
+.crossprice.det {
+    display: block;
+}
 
 .crossprice .rrp {
     font-size: 1.8rem;
