update product properties 55:07.07.2020

--- a/resources/views/Item/Components/SingleItem.twig
+++ b/resources/views/Item/Components/SingleItem.twig
@@ -29,6 +29,13 @@
 
                             <hr>
 
+                            <div class="mb-5">
+                                <span class="articlenumber small text-muted">
+                                    <b>{{ $translate("Ceres::Template.singleItemNumber") }} </b>
+                                    <span>{{ currentVariation.variation.number }}</span>
+                                </span>
+                            </div>
+
                             <div class="mb-5 custom-properties">
                                 <div class="row articlenumber custom-box">
                                     <div class="col-xs-6 col-md-5">
