update product properties 56:07.07.2020

--- a/resources/views/Item/Components/SingleItem.twig
+++ b/resources/views/Item/Components/SingleItem.twig
@@ -31,8 +31,8 @@
 
                             <div class="mb-5">
                                 <span class="articlenumber small text-muted">
-                                    <b>{{ $translate("Ceres::Template.singleItemNumber") }} </b>
-                                    <span>{{ currentVariation.variation.number }}</span>
+                                    <b>${ $translate("Ceres::Template.singleItemNumber") } </b>
+                                    <span>${ currentVariation.variation.number }</span>
                                 </span>
                             </div>
 
